# gw2-raid-guide

./: CMakeLists.txt  IcebroodStrikes.json  Nexus.h  QuickPlayRaids.json  README.md  Wing1Training.json  Wing2Training.json  Wing3Training.json  Wing4Training.json  Wing5Training.json  Wing6Training.json  Wing7Training.json  Wing8Training.json  build.sh  gen_icebrooddata.py  gen_icon.py  gen_quickplaydata.py  gen_wingdata.py  how to update strikes.txt  how to update.txt  toolchain-mingw.cmake
src/: Shared.h  dllmain.cpp  icon_png.h
src/data/: IcebroodData.cpp  QuickPlayData.cpp  QuickPlayData.h  WingData.cpp  WingData.h
src/ui/: RaidGuide.cpp  RaidGuide.h
